--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -1,22 +1,57 @@
----
-name: Sync Fork
+name: 'Upstream Sync'
+
 on:
   # schedule:
-  #   - cron: '*/30 * * * *' # every 30 minutes
-  workflow_dispatch: # on button click
+  #   - cron:  '0 7 * * 1,4'
+    # scheduled at 07:00 every Monday and Thursday
+
+  workflow_dispatch:  # click the button on Github repo!
+    inputs:
+      sync_test_mode: # Adds a boolean option that appears during manual workflow run for easy test mode config
+        description: 'Fork Sync Test Mode'
+        type: boolean
+        default: false
 
 jobs:
-  sync:
+  sync_latest_from_upstream:
     runs-on: ubuntu-latest
+    name: Sync latest commits from upstream repo
 
     steps:
-      - uses: tgymnich/fork-sync@v2.0.9
-        with:
-          owner: adferrand
-          repo: dnsrobocert
-          pr_title: Fork Sync
-          pr_message: Look at me I'm a fork!
-          auto_approve: false
-          token: ${{ secrets.GITHUB_TOKEN }}
-          base: master
-          head: master
+    # REQUIRED step
+    # Step 1: run a standard checkout action, provided by github
+    - name: Checkout target repo
+      uses: actions/checkout@v3
+      # with:
+      #   # optional: set the branch to checkout,
+      #   # sync action checks out your 'target_sync_branch' anyway
+      #   ref:  my-branch
+      #   # REQUIRED if your upstream repo is private (see wiki)
+      #   persist-credentials: false
+
+    # REQUIRED step
+    # Step 2: run the sync action
+    - name: Sync upstream changes
+      id: sync
+      uses: aormsby/Fork-Sync-With-Upstream-action@v3.4.1
+      with:
+        target_sync_branch: master
+        # REQUIRED 'target_repo_token' exactly like this!
+        target_repo_token: ${{ secrets.GITHUB_TOKEN }}
+        upstream_sync_branch: master
+        upstream_sync_repo: adferrand/dnsrobocert
+
+        # Set test_mode true during manual dispatch to run tests instead of the true action!!
+        test_mode: ${{ inputs.sync_test_mode }}
+      
+    # Step 3: Display a sample message based on the sync output var 'has_new_commits'
+    - name: New commits found
+      if: steps.sync.outputs.has_new_commits == 'true'
+      run: echo "New commits were found to sync."
+    
+    - name: No new commits
+      if: steps.sync.outputs.has_new_commits == 'false'
+      run: echo "There were no new commits."
+      
+    - name: Show value of 'has_new_commits'
+      run: echo ${{ steps.sync.outputs.has_new_commits }}
