--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -22,7 +22,8 @@ jobs:
     # Step 1: run a standard checkout action, provided by github
     - name: Checkout target repo
       uses: actions/checkout@v3
-      # with:
+      with:
+        fetch-depth: 0
       #   # optional: set the branch to checkout,
       #   # sync action checks out your 'target_sync_branch' anyway
       #   ref:  my-branch
