let pull request workflow create the branch

--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -18,10 +18,6 @@
           run: |
             git remote add upstream https://github.com/adferrand/dnsrobocert
             git fetch upstream
-            git branch upstream-merge upstream/master
-            # git merge --no-edit upstream/master
-            git push -f origin upstream-merge
+            git merge --no-edit upstream/master
         - name: Create Pull Request
           uses: peter-evans/create-pull-request@v6
-          with:
-            branch: upstream-merge
