--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -16,6 +16,8 @@
             fetch-depth: 0
         - name: Merge upstream
           run: |
+            git config --global user.email "actions@github.com"
+            git config --global user.name "Github Actions"
             git remote add upstream https://github.com/adferrand/dnsrobocert
             git fetch upstream
             git merge --no-edit upstream/master
