--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ test/assets/pebble*
 test-results.xml
 coverage.xml
 docs/_build
+.github/workflows/release.yml
+.github/workflows/main.yml
+.github/workflows/test-results.yml
