--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -23,3 +23,6 @@
             git merge --no-edit upstream/master
         - name: Create Pull Request
           uses: peter-evans/create-pull-request@v6
+          with:
+            token: ${{ secrets.ACTIONS_TOKEN}}
+      
