--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -1,28 +1,40 @@
 ---
-  name: Merge upstream branches
+  name: Sync Fork with Upstream
   on:
     workflow_dispatch:
-    # schedule:
-    #    # actually, ~5 minutes is the highest
-    #    # effective frequency you will get
-    #   - cron:  '* * * * *'
+    schedule:
+      # 00:00 UTC on Tuesdays
+      - cron:  '0 0 * * 2'
+  
+  env:
+    UPSTREAM_REPO: adferrand/dnsrobocert
+    ORG_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+    GIT_EMAIL: systems@ycharts.com
+    GIT_NAME: ychartsdeployer
+    GITHUB_TEAM: DevOps
+
   jobs:
     merge:
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v3
+        - name: Checkout fork
+          uses: actions/checkout@v4
           with:
             token: ${{ secrets.ACTIONS_TOKEN }}
             fetch-depth: 0
+
         - name: Merge upstream
           run: |
-            git config --global user.email "actions@github.com"
-            git config --global user.name "Github Actions"
-            git remote add upstream https://github.com/adferrand/dnsrobocert
-            git fetch upstream
-            git merge --no-edit upstream/master
+            git config --global user.email ${{ env.GIT_EMAIL }}
+            git config --global user.name ${{ env.GIT_NAME }}
+            git remote add upstream https://github.com/${{ env.UPSTREAM_REPO }}
+            git fetch upstream master:upstream-master
+            git reset --hard upstream-master
         - name: Create Pull Request
           uses: peter-evans/create-pull-request@v6
           with:
-            token: ${{ secrets.ACTIONS_TOKEN}}
+            token: ${{ env.ORG_TOKEN }}
+            branch: upstream-sync
+            title: Sync with upstream
+            reviewers: skoobasteeve
       
