--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -28,13 +28,14 @@
             git config --global user.email ${{ env.GIT_EMAIL }}
             git config --global user.name ${{ env.GIT_NAME }}
             git remote add upstream https://github.com/${{ env.UPSTREAM_REPO }}
-            git fetch upstream master:upstream-master
-            git reset --hard upstream-master
+            git fetch upstream
+            git merge --no-edit upstream/master
+
         - name: Create Pull Request
           uses: peter-evans/create-pull-request@v6
           with:
             token: ${{ env.ORG_TOKEN }}
             branch: upstream-sync
             title: Sync with upstream
-            # reviewers: skoobasteeve
+            # team-reviewers: DevOps
       
