--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -3,12 +3,12 @@
   on:
     workflow_dispatch:
     schedule:
-      # 00:00 UTC on Tuesdays
+      # 12:00 UTC on Tuesdays
       - cron:  '0 0 * * 2'
   
   env:
     UPSTREAM_REPO: adferrand/dnsrobocert
-    ORG_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+    ORG_TOKEN: ${{ secrets.ORG_TOKEN }}
     GIT_EMAIL: systems@ycharts.com
     GIT_NAME: ychartsdeployer
     GITHUB_TEAM: DevOps
@@ -28,14 +28,14 @@
             git config --global user.email ${{ env.GIT_EMAIL }}
             git config --global user.name ${{ env.GIT_NAME }}
             git remote add upstream https://github.com/${{ env.UPSTREAM_REPO }}
-            git fetch upstream
-            git merge --no-edit upstream/master
+            git fetch upstream master:upstream-master
+            git reset --hard upstream-master
 
         - name: Create Pull Request
           uses: peter-evans/create-pull-request@v6
           with:
-            token: ${{ env.ORG_TOKEN }}
+            token: ${{ secrets.ACTIONS_TOKEN }}
             branch: upstream-sync
             title: Sync with upstream
-            # team-reviewers: DevOps
+            team-reviewers: DevOps
       
